# DAL

./: .gitignore  README.md  cleanup_rdma.sh  installLibs.sh  installMLNX.sh  isntallLibs.sh  memcached.conf  nfs-client.sh  nfs-server.sh  profile.py  rename.sh  restartMLNX.sh  restartMemc.sh  test
Sherman/: CMakeLists.txt
Sherman/include/: Common.h  Config.h  Connection.h  DSM.h  DSMKeeper.h  Debug.h  Directory.h  DirectoryConnection.h  GLockAddress.h  GlobalAddress.h  IndexCache.h  Keeper.h  LocalAllocator.h  RawMessageConnection.h  Rdma.h  RdmaBuffer.h  ThreadConnection.h  Timer.h  Tree.h  mb_utils.h
Sherman/script/: hugepage.sh
Sherman/src/: AbstractMessageConnection.cpp  Cache.cpp  Common.cpp  DSM.cpp  DSMKeeper.cpp  Debug.cpp  Directory.cpp  DirectoryConnection.cpp  Keeper.cpp  ThreadConnection.cpp  Tree.cpp  mb_utils.cpp
Sherman/src/rdma/: Operation.cpp  Resource.cpp  StateTrans.cpp  Utility.cpp
common/: rdma_client.c  rdma_common.h  rdma_server.c
litl/: Makefile
litl/include/: topology.h
litl/src/: Makefile  cbomcs.c  interpose.c  waiting_policy.h
litl2/: .gitignore  Makefile  Makefile.config  local_rdma.sh
litl2/include/: fnm.h  fns.h  htlockepfl.h
litl2/src/: Makefile  __rdma_client.c  __rdma_client_backup.c  alockepfl.c  cbomcs.c  cna.c  cptltkt.c  ctkttkt.c  fnm.c  fns.c  hmcs.c  htlockepfl.c  hyshmcs.c  interpose.c  interpose_client.c  interpose_client.h  interpose_client_lease1.c  interpose_client_lease2.c  interpose_client_spinlock.c  interpose_client_spinlock_bo.c  interpose_client_test.c  interpose_server.c  rdma_client.c  rdma_common.c  rdma_common.h  rdma_server.c  tcp_client.c  tcp_common.h  tcp_server.c  utils.c  utils.h
microbench/: Makefile  _run.sh  appbench.cpp  barrier_file  clients.txt  lock.h  main  main.c  main_disa  main_disa.c  main_disa_  main_disa_.cpp  main_orig  main_orig.c  mb_utils.cpp  mb_utils.h  microbench.cpp  mpi_test.c  nodes.txt  plot.py  plot1.py  plot2.py  plot3.py  plot_common.py  plot_proxy.py  rdma_ops.cpp  rdma_ops.h  rdtsc.h  resetRDMA.sh  run.sh  run_app.sh  run_sys.sh  sysg_nodes.txt  test_rdma_conn  test_rdma_conn.cpp
microbench/buggy_Hod_1cn/lat/: rdma_kvs_libhmcs.original_.csv  rdma_kvs_libhmcs.original_Hod.csv  rdma_kvs_libhmcs.original_Rfaa.csv  rdma_kvs_shermanLock_.csv  rdma_kvs_shermanLock_Hod.csv  rdma_kvs_shermanLock_HodRfaa.csv  rdma_kvs_shermanLock_Rfaa.csv
microbench/buggy_Hod_1cn/ldist/: rdma_kvs_libhmcs.original_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_Hod_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_Hod_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original_Hod_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_Hod_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original_Hod_nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original_Hod_nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original_Rfaa_nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r2.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r0.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r1.csv  rdma_kvs_libhmcs.original__nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r2.csv  rdma_kvs_shermanLock_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r0.csv  rdma_kvs_shermanLock_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r1.csv  rdma_kvs_shermanLock_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR1024_NUMA1_mHo16_r2.csv  rdma_kvs_shermanLock_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r0.csv  rdma_kvs_shermanLock_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r1.csv  rdma_kvs_shermanLock_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR128_NUMA1_mHo16_r2.csv  rdma_kvs_shermanLock_HodRfaa_nodeNR1_threadNR16_mnNR2_lockNR8_NUMA1_mHo16_r0.csv  (+28 more)
microbench/interm_litl/: test_lat.csv
microbench/metadata/: C%d  C0  C1  MN
microbench/mlocks_missing_1n_zipf/: test_lock.csv
microbench/res_2node_2/: test_lat.csv  test_tp.csv
microbench/res_2nodes_kvs_2mn_1/: test_lat.csv  test_lock.csv  test_tp.csv
microbench/res_all_1n_3mn_z_1/: test_lat.csv  test_tp.csv
microbench/res_kvs_1node_1/: test_lat.csv  test_tp.csv
results_1node_1/: test_tp.csv
sherman_backup/: safetree_hod.cpp
will-it-scale/: Makefile  main.c
will-it-scale/tests/: pthread_mutex1.c
(+8020 files in other folders)
